--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,12 @@ SET (PROJECT_SOURCE_DIR "${PROJECT_SOURCE_DIR}/src")
 include_directories("/opt/amazon/efa/include/")
 link_directories("/opt/amazon/efa/lib64/")
 
-file(GLOB benchmark_SRC CONFIGURE_DEPENDS ${PROJECT_SOURCE_DIR}/*.h ${PROJECT_SOURCE_DIR}/*.cpp)
+file(GLOB benchmark_SRC CONFIGURE_DEPENDS
+${PROJECT_SOURCE_DIR}/*.h
+${PROJECT_SOURCE_DIR}/*.cpp
+${PROJECT_SOURCE_DIR}/fi_pingpong_util/*.h
+${PROJECT_SOURCE_DIR}/fi_pingpong_util/*.cpp
+)
 
 add_executable(benchmark ${benchmark_SRC})
 
