Add benchmark results

--- a/server.conf
+++ b/server.conf
@@ -1,6 +1,6 @@
 --debug
 --mode=server
 --src_port=47500
---provider=sockets
---iterations=10
---payload_size=64
+--provider=efa
+--iterations=10000
+--payload_size=1024
