--- a/client.conf
+++ b/client.conf
@@ -1,7 +1,7 @@
 --debug
 --mode=client
 --dst_port=47500
---provider=sockets
+--provider=efa
 --dst_addr=127.0.0.1
---iterations=10
---payload_size=64
+--iterations=10000
+--payload_size=1024
