Added ack count sync

--- a/client.conf
+++ b/client.conf
@@ -1,7 +1,7 @@
 --debug
 --mode=client
 --dst_port=47500
---provider=efa
+--provider=sockets
 --dst_addr=127.0.0.1
 --iterations=10000
 --payload_size=1024
