Update libfabric include dir

--- a/libefa/CMakeLists.txt
+++ b/libefa/CMakeLists.txt
@@ -6,6 +6,8 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -Wall -O3")
 
 SET (PROJECT_SOURCE_DIR "${PROJECT_SOURCE_DIR}/src")
 
+include_directories(${LIBFABRIC_INCLUDE_DIR})
+
 file(GLOB libefa_src CONFIGURE_DEPENDS
 ${PROJECT_SOURCE_DIR}/*.h
 ${PROJECT_SOURCE_DIR}/*.cpp
