Update libfabric cmake

--- a/efa-bench/CMakeLists.txt
+++ b/efa-bench/CMakeLists.txt
@@ -2,13 +2,12 @@ cmake_minimum_required(VERSION 3.10)
 
 project(efa-benchmark)
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -Wall -O3")
-
 SET (PROJECT_SOURCE_DIR "${PROJECT_SOURCE_DIR}/src")
 
 include_directories(${CMAKE_SOURCE_DIR}/libefa/src/)
-include_directories("/opt/amazon/efa/include/")
-link_directories("/opt/amazon/efa/lib64/")
+
+include_directories(${LIBFABRIC_INCLUDE_DIR})
+link_directories(${LIBFABRIC_LINK_DIR})
 
 file(GLOB benchmark_SRC CONFIGURE_DEPENDS
 ${PROJECT_SOURCE_DIR}/*.h
