Update cmake conf

--- a/efa-bench/CMakeLists.txt
+++ b/efa-bench/CMakeLists.txt
@@ -2,7 +2,9 @@ cmake_minimum_required(VERSION 3.10)
 
 project(efa-benchmark)
 
-SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -Wall -O3")
+SET (CMAKE_BUILD_TYPE Debug)
+
+SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -O3")
 
 SET (PROJECT_SOURCE_DIR "${PROJECT_SOURCE_DIR}/src")
 
