Refactor server send logic

--- a/efa-bench/client.conf
+++ b/efa-bench/client.conf
@@ -1,9 +1,9 @@
 --debug
 --mode=client
 --dst_port=47500
---provider=sockets
+--provider=efa
 --endpoint=rdm
 --dst_addr=127.0.0.1
---iterations=10000
+--iterations=1000000
 --payload=4096
---batch=1000
+--batch=100
