--- a/efa-bench/server.conf
+++ b/efa-bench/server.conf
@@ -1,8 +1,8 @@
 --debug
 --mode=server
 --src_port=47500
---provider=sockets
+--provider=efa
 --endpoint=rdm
---iterations=10000
+--iterations=1000000
 --payload=4096
---batch=1000
+--batch=100
