Add fi_tinject benchmarks

--- a/efa-bench/client-local.conf
+++ b/efa-bench/client-local.conf
@@ -1,11 +1,11 @@
 --debug
 --mode=client
 --dst_port=47500
---provider=efa
+--provider=sockets
 --endpoint=rdm
 --dst_addr=127.0.0.1
---iterations=100000
---payload=4096
+--iterations=1
+--payload=4
 --batch=100
 --run_all
 --inject
