--- a/efa-bench/server-local.conf
+++ b/efa-bench/server-local.conf
@@ -1,10 +1,10 @@
---debug
+
 --mode=server
 --src_port=47500
---provider=efa
+--provider=sockets
 --endpoint=rdm
---iterations=100000
---payload=4096
+--iterations=1
+--payload=4
 --batch=100
 --cq_try=0.8
 --run_all
