--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,8 +12,8 @@ add_custom_target(deploy ALL)
 add_custom_command(TARGET deploy POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/efa-bench/client.conf ${CMAKE_BINARY_DIR}/client.conf
     COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/efa-bench/server.conf ${CMAKE_BINARY_DIR}/server.conf
-    COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/efa-bench/local-client.conf ${CMAKE_BINARY_DIR}/client-local.conf
-    COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/efa-bench/local-server.conf ${CMAKE_BINARY_DIR}/server-local.conf
+    COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/efa-bench/local-client.conf ${CMAKE_BINARY_DIR}/local-client.conf
+    COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/efa-bench/local-server.conf ${CMAKE_BINARY_DIR}/local-server.conf
     COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_BINARY_DIR}/efa-bench/benchmark ${CMAKE_BINARY_DIR}/benchmark
 )
 
