--- a/efa-bench/client.conf
+++ b/efa-bench/client.conf
@@ -1,6 +1,6 @@
 --debug
 --mode=client
---benchmark_type=rma_sel_comp
+--benchmark_type=ping_pong
 --dst_port=47500
 --provider=efa
 --endpoint=rdm
@@ -10,3 +10,4 @@
 --batch=100
 --rma_op=write
 --tagged
+--runtime=5
