--- a/efa-bench/server.conf
+++ b/efa-bench/server.conf
@@ -1,6 +1,6 @@
 --debug
 --mode=server
---benchmark_type=rma_sel_comp
+--benchmark_type=ping_pong
 --src_port=47500
 --provider=efa
 --endpoint=rdm
@@ -10,3 +10,4 @@
 --cq_try=0.8
 --rma_op=write
 --tagged
+--runtime=5
