Add logger to batch benchmarks

--- a/efa-bench/local-server.conf
+++ b/efa-bench/local-server.conf
@@ -1,6 +1,6 @@
 --debug
 --mode=server
---benchmark_type=ping_pong
+--benchmark_type=batch
 --src_port=47500
 --provider=sockets
 --endpoint=rdm
@@ -11,3 +11,4 @@
 --rma_op=write
 --tagged
 --runtime=5
+--hw_counters=/sys/class/net/lo/statistics/
