--- a/efa-bench/server.conf
+++ b/efa-bench/server.conf
@@ -1,6 +1,6 @@
 --debug
 --mode=server
---benchmark_type=ping_pong
+--benchmark_type=batch
 --src_port=47500
 --provider=efa
 --endpoint=rdm
@@ -11,3 +11,4 @@
 --rma_op=write
 --tagged
 --runtime=5
+--hw_counters=/sys/class/infiniband/rdmap0s6/ports/1/hw_counters/
