refactor latency tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ add_custom_command(TARGET deploy POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/efa-bench/server.conf ${CMAKE_BINARY_DIR}/server.conf
     COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/efa-bench/local-client.conf ${CMAKE_BINARY_DIR}/local-client.conf
     COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/efa-bench/local-server.conf ${CMAKE_BINARY_DIR}/local-server.conf
-    COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/efa-bench/testsuite.py ${CMAKE_BINARY_DIR}/testsuite.py
+    COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/efa-bench/scripts/test_runner.py ${CMAKE_BINARY_DIR}/test_runner.py
     COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_BINARY_DIR}/efa-bench/benchmark ${CMAKE_BINARY_DIR}/benchmark
 )
 
