Add large memory region random rma benchmark

--- a/efa-bench/local-client.conf
+++ b/efa-bench/local-client.conf
@@ -1,6 +1,6 @@
 --debug
 --mode=client
---benchmark_type=batch
+--benchmark_type=rma_large_buffer
 --dst_port=47500
 --provider=sockets
 --endpoint=rdm
