--- a/efa-bench/local-client.conf
+++ b/efa-bench/local-client.conf
@@ -1,13 +1,14 @@
 --debug
 --mode=client
---benchmark_type=batch_large_buffer
+--benchmark_type=batch
 --dst_port=47500
 --provider=sockets
 --endpoint=rdm
 --dst_addr=127.0.0.1
---iterations=10000
+--iterations=3
 --payload=64
---batch=20
+--batch=1
 --rma_op=write
 --runtime=7
+--threads=2
 --hw_counters=/sys/class/net/lo/statistics/
