--- a/efa-bench/local-server.conf
+++ b/efa-bench/local-server.conf
@@ -1,13 +1,14 @@
 --debug
 --mode=server
---benchmark_type=batch_large_buffer
+--benchmark_type=batch
 --src_port=47500
 --provider=sockets
 --endpoint=rdm
---iterations=10000
+--iterations=3
 --payload=64
---batch=20
+--batch=1
 --cq_try=0.8
 --rma_op=write
 --runtime=5
+--threads=2
 --hw_counters=/sys/class/net/lo/statistics/
