Initial multithreaded batch sen/recv

--- a/efa-bench/client.conf
+++ b/efa-bench/client.conf
@@ -1,6 +1,6 @@
 --debug
 --mode=client
---benchmark_type=batch_large_buffer
+--benchmark_type=batch
 --dst_port=47500
 --provider=efa
 --endpoint=rdm
@@ -10,4 +10,5 @@
 --batch=100
 --rma_op=write
 --runtime=5
+--threads=1
 --hw_counters=/sys/class/infiniband/rdmap0s6/ports/1/hw_counters/
