--- a/efa-bench/server.conf
+++ b/efa-bench/server.conf
@@ -1,6 +1,6 @@
 --debug
 --mode=server
---benchmark_type=batch_large_buffer
+--benchmark_type=batch
 --src_port=47500
 --provider=efa
 --endpoint=rdm
@@ -10,4 +10,5 @@
 --cq_try=0.8
 --rma_op=write
 --runtime=5
+--threads=1
 --hw_counters=/sys/class/infiniband/rdmap0s6/ports/1/hw_counters/
