Add multithreaded benchmarks for sen/rma

--- a/efa-bench/client.conf
+++ b/efa-bench/client.conf
@@ -1,7 +1,8 @@
 --debug
 --mode=client
 --benchmark_type=batch
---dst_port=47500
+--port=47500
+--oob_port=46500
 --provider=efa
 --endpoint=rdm
 --dst_addr=127.0.0.1
