--- a/efa-bench/local-server.conf
+++ b/efa-bench/local-server.conf
@@ -1,7 +1,8 @@
 --debug
 --mode=server
 --benchmark_type=batch
---src_port=47500
+--port=47500
+--oob_port=46500
 --provider=sockets
 --endpoint=rdm
 --iterations=3
