Update latency benchmarks

--- a/efa-bench/local-client.conf
+++ b/efa-bench/local-client.conf
@@ -1,12 +1,12 @@
 --debug
 --mode=client
---benchmark_type=rma
+--benchmark_type=latency
 --port=47500
 --oob_port=46500
 --provider=sockets
 --endpoint=rdm
 --dst_addr=127.0.0.1
---iterations=3
+--iterations=10
 --payload=64
 --batch=1
 --rma_op=write
