--- a/efa-bench/local-server.conf
+++ b/efa-bench/local-server.conf
@@ -1,11 +1,11 @@
 --debug
 --mode=server
---benchmark_type=rma
+--benchmark_type=latency
 --port=47500
 --oob_port=46500
 --provider=sockets
 --endpoint=rdm
---iterations=3
+--iterations=10
 --payload=64
 --batch=1
 --cq_try=0.8
